--- a/portfolio_ideta/about.html
+++ b/portfolio_ideta/about.html
@@ -50,31 +50,28 @@
                 <div class="wrapper">
                     <div class="ttl">
                         <h2>私の話を少しだけ</h2>
-                        <p class="cursive">History</p>
+                        <p class="cursive">Profile</p>
                         <div class="erase"></div>
                         <div class="ttl_line"></div>
                     </div>
+                    <div class="txt">
+                        <p>大阪府出身、1991年生まれ。結婚を機に、25年過ごした大阪を離れて関東へ。<br>
+                            今は埼玉県にある昨年建てた一軒家で、夫と２人の息子の４人暮らし。<br><br>
+                            子どもの頃から絵を描くことや綺麗なものを見ることが好き。なんとなく過ごしてきましたが、今振り返ると「絵」や「イラスト」が常に側にある生活をしてきて、デザイナーを目指すのは必然のように感じます。<br><br>
+                            もう１つ好きなものが医療。大阪大学を卒業後、看護師として移植医療を行う外科病棟と小児集中治療室、小児クリニックや保育園看護師など、主に小児医療を中心に経験してきました。特殊な環境下に置かれた子どもの気持ちやその家族の想いを汲み取り、安心してもらえるよう配慮することを大切に。私の周りはいつも子どもやその家族の笑顔でいっぱいでした。これが私の天職だ、と仕事にやりがいも感じています。<br><br>
+                            そんな私に転機が訪れたのは、自分の結婚式でプロフィールブックとウェルカムボードを自作した時。こんなに楽しいことを仕事にできたら、もっと人生楽しくなると考えました。そして、その後出会ったのが「Webデザイナー」です。
+                        </p>
+                    </div>
+                    <div class="txt">
+                        <p>Webデザイナーとして、どんなことが私にできるのか。<br>
+                            看護師として大切にしてきたことと、養ってきた「聞く力」「寄り添う力」が私の強みであり、これからもずっと大切にしていきたい、自分の軸として持っていたい。<br><br>
+                            お客様の想いを汲み取り、大切にし、本当の悩みや課題を引き出していく。私の大好きなデザインの力で解決に導き、お客様やユーザーを笑顔にする。<br>
+                            まるで花が開くように。<br>
+                            そんなデザイナーを目指しています。
+                        </p>
+                        <p>人生の大切な部分で、人の想いに触れ、関わり、支え、一緒に歩んでいく。</p>
+                    </div>
                 </div>
-                <div class="txt wrapper">
-                    <p>大阪府出身、1991年生まれ。結婚を機に、25年過ごした大阪を離れて関東へ。<br>
-                        今は埼玉県にある昨年建てた一軒家で、夫と２人の息子の４人暮らし。<br><br>
-                        子どもの頃から絵を描くことや綺麗なものを見ることが好き。なんとなく過ごしてきましたが、今振り返ると「絵」や「イラスト」が常に側にある生活をしてきて、デザイナーを目指すのは必然のように感じます。<br><br>
-                        もう１つ好きなものが医療。大阪大学を卒業後、看護師として移植医療を行う外科病棟と小児集中治療室、小児クリニックや保育園看護師など、主に小児医療を中心に経験してきました。特殊な環境下に置かれた子どもの気持ちやその家族の想いを汲み取り、安心してもらえるよう配慮することを大切に。私の周りはいつも子どもやその家族の笑顔でいっぱいでした。これが私の天職だ、と仕事にやりがいも感じています。<br><br>
-                        そんな私に転機が訪れたのは、自分の結婚式でプロフィールブックとウェルカムボードを自作した時。こんなに楽しいことを仕事にできたら、もっと人生楽しくなると考えました。そして、その後出会ったのが「Webデザイナー」です。
-                    </p>
-                </div>
-                <!-- <div class="bg_img"></div> -->
-
-                <div class="txt wrapper">
-                    <p>Webデザイナーとして、どんなことが私にできるのか。<br>
-                        看護師として大切にしてきたことと、養ってきた「聞く力」「寄り添う力」が私の強みであり、これからもずっと大切にしていきたい、自分の軸として持っていたい。<br><br>
-                        お客様の想いを汲み取り、大切にし、本当の悩みや課題を引き出していく。私の大好きなデザインの力で解決に導き、お客様やユーザーを笑顔にする。<br>
-                        まるで花が開くように。<br>
-                        そんなデザイナーを目指しています。
-                    </p>
-                    <p>人生の大切な部分で、人の想いに触れ、関わり、支え、一緒に歩んでいく。</p>
-                </div>
-            </div>
         </section>
         <section data-scroll-section class="scroll_section">
             <div class="history wrapper">
@@ -231,6 +228,8 @@
                 </div>
             </div>
         </section>
+
+
         <section data-scroll-section class="scroll_section">
             <div class="strength">
                 <div class="wrapper">
@@ -267,97 +266,103 @@
                 </div>
             </div>
         </section>
+
+
         <section data-scroll-section class="scroll_section">
-            <div class="love wrapper">
-                <div class="ttl">
-                    <h2>好きなこと</h2>
-                    <p class="cursive">Love</p>
-                    <div class="erase"></div>
-                    <div class="ttl_line"></div>
-                </div>
-                <div class="contents">
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>映画鑑賞</p>
-                        </div>
+            <div class="love">
+                <div class="wrapper">
+                    <div class="ttl">
+                        <h2>好きなこと</h2>
+                        <p class="cursive">Love</p>
+                        <div class="erase"></div>
+                        <div class="ttl_line"></div>
                     </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>YouTubeを見ること</p>
+                    <div class="contents">
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>映画鑑賞</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>歌うこと</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>YouTubeを見ること</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>K-POPアイドルを見ること</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>歌うこと</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>カフェでのんびりすること</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>K-POPアイドルを見ること</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>空を見ながら息抜きすること</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>カフェでのんびりすること</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>春と秋に窓を開けて過ごすこと</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>空を見ながら息抜きすること</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>春と秋に窓を開けて過ごすこと</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <section data-scroll-section class="scroll_section">
-            <div class="design wrapper">
-                <div class="ttl">
-                    <h2>得意なデザイン</h2>
-                    <p class="cursive">design</p>
-                    <div class="erase"></div>
-                    <div class="ttl_line"></div>
-                </div>
-                <div class="contents">
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>シンプル</p>
-                        </div>
+            <div class="design">
+                <div class="wrapper">
+                    <div class="ttl">
+                        <h2>得意なデザイン</h2>
+                        <p class="cursive">design</p>
+                        <div class="erase"></div>
+                        <div class="ttl_line"></div>
                     </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p> ナチュラル</p>
+                    <div class="contents">
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>シンプル</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>洗練された</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p> ナチュラル</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>大人かわいい</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>洗練された</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="content">
-                        <img class="check" src="./images/check.svg">
-                        <div>
-                            <p>上品</p>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>大人かわいい</p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img class="check" src="./images/check.svg">
+                            <div>
+                                <p>上品</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -374,6 +379,17 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
                     el: document.querySelector('[data-scroll-container]'),
                     direction: 'horizontal',
                     smooth: true,
+                    tablet: {
+                        direction: 'horizontal',
+                        smooth: true,
+
+                    },
+                    mobile: {
+                        direction: 'horizontal',
+                        smooth: true,
+
+                    }
+
                 })
             })
         })()
