--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -50,42 +50,50 @@
             <div class="fv">
                 <div class="wrapper">
                     <h1>あなたの想いを、開花させる。</h1>
-                    <p>WEB DESIGN</p>
+                    <div>
+                        <p>WEB DESIGN</p>
+                    </div>
                     <!-- <img src="./images/FV_img.png"> -->
                 </div>
             </div>
         </section>
         <section data-scroll-section class="scroll_section">
             <div class="about">
-                <div class="ttl wrapper">
-                    <h2>わたしのこと</h2>
-                    <p class="cursive">About<br>me</p>
-                    <div class="erase"></div>
-                    <div class="ttl_line"></div>
-                </div>
-                <div class="about_content wrapper">
-                    <div>
-                        <img src="./images/profile-80.jpg" alt="プロフィール写真">
+                <div class="wrapper">
+                    <div class="ttl">
+                        <h2>わたしのこと</h2>
+                        <p class="cursive">About<br>me</p>
+                        <div class="erase"></div>
+                        <div class="ttl_line"></div>
                     </div>
-                    <div>
-                        <p>1991年生まれ、大阪府出身。<br>
-                            大阪大学卒業後、看護師として就職。<br>
-                            2023年9月、2人目育休中にWebデザインを独学で勉強し始め、その後デザスタにて学ぶ。デザインの力で、周りの人たちを笑顔にしたい。</p>
-                        <a href="">
-                            <div class="btn">
-                                <p>もっと<br>知りたい</p>
-                                <div class="arrow_right"></div>
-                                <div class="arrow_bottom"></div>
-                                <p class="en">MORE</p>
+                    <div class="about_content">
+                        <div>
+                            <img src="./images/profile@2x.png" alt="プロフィール写真">
+                        </div>
+                        <div>
+                            <div class="txt_bg">
+                                <div>
+                                    <p class="txt">1991年生まれ、大阪府出身。<br>
+                                        大阪大学卒業後、看護師として就職。<br>
+                                        2023年9月、2人目育休中にWebデザインを独学で勉強し始め、その後デザスタにて学ぶ。デザインの力で、周りの人たちを笑顔にしたい。</p>
+                                </div>
                             </div>
-                        </a>
+                            <a href="">
+                                <div class="btn">
+                                    <p>もっと<br>知りたい</p>
+                                    <div class="arrow_right"></div>
+                                    <div class="arrow_bottom"></div>
+                                    <p class="en">MORE</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
             <!-- <img src="./images/flower001.png"> -->
         </section>
-        <section data-scroll-section class="works scroll_section">
-            <div class="works_wrapper">
+        <section data-scroll-section class="scroll_section">
+            <div class="works">
                 <div class=" wrapper">
                     <div class="ttl">
                         <h2>つくったもの</h2>
@@ -95,24 +103,24 @@
                     </div>
                 </div>
 
-
-                <div class="hp wrapper">
-                    <div class="hp_square">
-                        <h3>WEB SITE</h3>
-                        <div class="hp_img">
-                            <img src="./images/hp_cafe_FV-80.jpg" alt="WEBSITEのFV画像">
-                        </div>
-                        <a class="hp_link" href="">
-                            <div class="btn">
-                                <p>もっと<br>知りたい</p>
-                                <div class="arrow_right"></div>
-                                <div class="arrow_bottom"></div>
-                                <p class="en">MORE</p>
+                <div class="hp">
+                    <div class="wrapper">
+                        <div class="hp_square">
+                            <h3>WEB SITE</h3>
+                            <div class="hp_img">
+                                <img src="./images/hp_cafe_FV-80.jpg" alt="WEBSITEのFV画像">
                             </div>
-                        </a>
+                            <a class="hp_link" href="">
+                                <div class="btn">
+                                    <p>もっと<br>知りたい</p>
+                                    <div class="arrow_right"></div>
+                                    <div class="arrow_bottom"></div>
+                                    <p class="en">MORE</p>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <!-- <img src="./images/flower002.png"> -->
 
                 <div class="lp">
                     <div class="wrapper">
@@ -131,30 +139,28 @@
                             </a>
                         </div>
                     </div>
-
                 </div>
-                <!-- <img src="./images/flower003.png"> -->
 
-                <div class="wrapper">
-                    <div class="bn_square">
-                        <h3>BANNER</h3>
-                        <div class="bn_img">
-                            <img src="./images/bn_supaisukennkyuujyo_1.jpg" alt="BANNERのFV画像">
-                        </div>
-                        <a href="">
-                            <div class="btn">
-                                <p>もっと<br>知りたい</p>
-                                <div class="arrow_right"></div>
-                                <div class="arrow_bottom"></div>
-                                <p class="en">MORE</p>
+                <div class="bn">
+                    <div class="wrapper">
+                        <div class="bn_square">
+                            <h3>BANNER</h3>
+                            <div class="bn_img">
+                                <img src="./images/bn_supaisukennkyuujyo_1.jpg" alt="BANNERのFV画像">
                             </div>
-                        </a>
+                            <a href="">
+                                <div class="btn">
+                                    <p>もっと<br>知りたい</p>
+                                    <div class="arrow_right"></div>
+                                    <div class="arrow_bottom"></div>
+                                    <p class="en">MORE</p>
+                                </div>
+                            </a>
+                        </div>
+
                     </div>
-
-
                 </div>
             </div>
-            <!-- <img src="./images/flower004.png"> -->
         </section>
         <section data-scroll-section class="scroll_section">
             <div class="contact">
@@ -204,6 +210,16 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
                     el: document.querySelector('[data-scroll-container]'),
                     direction: 'horizontal',
                     smooth: true,
+                    tablet: {
+                        direction: 'horizontal',
+                        smooth: true,
+
+                    },
+                    mobile: {
+                        direction: 'horizontal',
+                        smooth: true,
+
+                    }
                 })
             })
         })()
