--- a/portfolio_ideta/works_hp.html
+++ b/portfolio_ideta/works_hp.html
@@ -96,6 +96,17 @@
                     el: document.querySelector('[data-scroll-container]'),
                     direction: 'horizontal',
                     smooth: true,
+                    tablet: {
+                        direction: 'horizontal',
+                        smooth: true,
+
+                    },
+                    mobile: {
+                        direction: 'horizontal',
+                        smooth: true,
+
+                    }
+
                 })
             })
         })()
