--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -57,91 +57,96 @@
                 </div>
             </div>
         </section>
+
         <section data-scroll-section class="scroll_section">
             <div class="about">
                 <div class="wrapper">
-                    <div class="ttl">
-                        <h2>わたしのこと</h2>
-                        <p class="cursive">About<br>me</p>
-                        <div class="erase"></div>
-                        <div class="ttl_line"></div>
-                    </div>
-                    <div class="about_content">
-                        <div>
-                            <img src="./images/profile@2x.png" alt="プロフィール写真">
+                    <div class="top_contents">
+
+                        <div class="ttl">
+                            <h2>わたしのこと</h2>
+                            <p class="cursive">About<br>me</p>
+                            <div class="erase"></div>
+                            <div class="ttl_line"></div>
                         </div>
-                        <div>
-                            <div class="txt_bg">
-                                <div>
-                                    <p class="txt">1991年生まれ、大阪府出身。<br>
-                                        大阪大学卒業後、看護師として就職。<br>
-                                        2023年9月、2人目育休中にWebデザインを独学で勉強し始め、その後デザスタにて学ぶ。デザインの力で、周りの人たちを笑顔にしたい。</p>
-                                </div>
+                        <div class="about_content">
+                            <div>
+                                <img src="./images/profile@2x.png" alt="プロフィール写真">
                             </div>
-                            <a href="">
-                                <div class="btn">
-                                    <p>もっと<br>知りたい</p>
-                                    <div class="arrow_right"></div>
-                                    <div class="arrow_bottom"></div>
-                                    <p class="en">MORE</p>
+                            <div>
+                                <div class="txt_bg">
+                                    <div>
+                                        <p class="txt">1991年生まれ、大阪府出身。<br>
+                                            大阪大学卒業後、看護師として就職。<br>
+                                            2023年9月、2人目育休中にWebデザインを独学で勉強し始め、その後デザスタにて学ぶ。デザインの力で、周りの人たちを笑顔にしたい。</p>
+                                    </div>
                                 </div>
-                            </a>
+                                <a href="">
+                                    <div class="btn">
+                                        <p>もっと<br>知りたい</p>
+                                        <div class="arrow_right"></div>
+                                        <div class="arrow_bottom"></div>
+                                        <p class="en">MORE</p>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- <img src="./images/flower001.png"> -->
         </section>
+
         <section data-scroll-section class="scroll_section">
             <div class="works">
-                <div class=" wrapper">
-                    <div class="ttl">
-                        <h2>つくったもの</h2>
-                        <p class="cursive">Works</p>
-                        <div class="erase"></div>
-                        <div class="works_line"></div>
-                    </div>
-                </div>
-
-                <div class="hp">
+                <div class="first_contents">
                     <div class="wrapper">
-                        <div class="hp_square">
-                            <h3>WEB SITE</h3>
-                            <div class="hp_img">
-                                <img src="./images/hp_cafe_FV-80.jpg" alt="WEBSITEのFV画像">
-                            </div>
-                            <a class="hp_link" href="">
-                                <div class="btn">
-                                    <p>もっと<br>知りたい</p>
-                                    <div class="arrow_right"></div>
-                                    <div class="arrow_bottom"></div>
-                                    <p class="en">MORE</p>
+                        <div class="ttl">
+                            <h2>つくったもの</h2>
+                            <p class="cursive">Works</p>
+                            <div class="erase"></div>
+                            <div class="works_line"></div>
+                        </div>
+                        <div class="hp">
+                            <div class="hp_square">
+                                <h3>WEB SITE</h3>
+                                <div class="hp_img">
+                                    <img src="./images/hp_cafe_FV-80.jpg" alt="WEBSITEのFV画像">
                                 </div>
-                            </a>
+                                <a class="hp_link" href="">
+                                    <div class="btn">
+                                        <p>もっと<br>知りたい</p>
+                                        <div class="arrow_right"></div>
+                                        <div class="arrow_bottom"></div>
+                                        <p class="en">MORE</p>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="lp">
+                <div class="second_contents">
                     <div class="wrapper">
-                        <div class="lp_square">
-                            <h3>LANDING PAGE</h3>
-                            <div class="lp_img">
-                                <img src="./images/lp_usazemi_FV.jpg" alt="LANDINGPAGEのFV画像">
-                            </div>
-                            <a href="">
-                                <div class="btn">
-                                    <p>もっと<br>知りたい</p>
-                                    <div class="arrow_right"></div>
-                                    <div class="arrow_bottom"></div>
-                                    <p class="en">MORE</p>
+                        <div class="lp">
+                            <div class="lp_square">
+                                <h3>LANDING PAGE</h3>
+                                <div class="lp_img">
+                                    <img src="./images/lp_usazemi_FV.jpg" alt="LANDINGPAGEのFV画像">
                                 </div>
-                            </a>
+                                <a href="">
+                                    <div class="btn">
+                                        <p>もっと<br>知りたい</p>
+                                        <div class="arrow_right"></div>
+                                        <div class="arrow_bottom"></div>
+                                        <p class="en">MORE</p>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="bn">
+                <div class="third_contents">
                     <div class="wrapper">
                         <div class="bn_square">
                             <h3>BANNER</h3>
@@ -162,43 +167,54 @@
                 </div>
             </div>
         </section>
-        <section data-scroll-section class="scroll_section">
+
+        <!-- <section data-scroll-section class="scroll_section">
             <div class="contact">
-                <div class="ttl wrapper">
-                    <h2>おはなしする</h2>
-                    <p class="cursive">Contact</p>
-                    <div class="erase"></div>
-                    <div class="contact_line"></div>
+                <div class="wrapper">
+                    <div class="top_contents">
+                        <div class="ttl">
+                            <h2>おはなしする</h2>
+                            <p class="cursive">Contact</p>
+                            <div class="erase"></div>
+                            <div class="contact_line"></div>
+                        </div>
+                        <div class="txt">
+                            <p>ご相談や励ましのお言葉など、<br>
+                                何でもお話できたらと思います。<br>
+                                お気軽にお問い合わせください。<br>
+                                右記フォームより必要事項を記入いただき、<br>
+                                「送信する」を押してください。</p>
+                        </div>
+                        <form
+                            action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdQT8L3UAJMfiiDTRGbAAKqm935UD3J8gkRpPijM-KmUQ2-sQ/formResponse"
+                            method="post" class="wrapper">
+                            <table class="contact-table">
+                                <tr>
+                                    <th>お名前</th>
+                                    <td>
+                                        <input type="text" name="entry.193574675" placeholder="山田　花子">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>メールアドレス</th>
+                                    <td>
+                                        <input type="email" name="entry.229513772" placeholder="@">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>お問い合わせ内容</th>
+                                    <td>
+                                        <textarea name="entry.1182652199" id=""></textarea>
+                                    </td>
+                                </tr>
+                            </table>
+                            <input class="submit" type="submit" value="送信する">
+
+                        </form>
+                    </div>
                 </div>
-
-                <form
-                    action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdQT8L3UAJMfiiDTRGbAAKqm935UD3J8gkRpPijM-KmUQ2-sQ/formResponse"
-                    method="post" class="wrapper">
-                    <table class="contact-table">
-                        <tr>
-                            <th>お名前</th>
-                            <td>
-                                <input type="text" name="entry.193574675" placeholder="山田　花子">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>メールアドレス</th>
-                            <td>
-                                <input type="email" name="entry.229513772" placeholder="@">
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>お問い合わせ内容</th>
-                            <td>
-                                <textarea name="entry.1182652199" id=""></textarea>
-                            </td>
-                        </tr>
-                    </table>
-                    <input class="submit" type="submit" value="送信する">
-
-                </form>
             </div>
-        </section>
+        </section> -->
     </main>
     <script src="
 https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
