--- a/portfolio_ideta/works_hp_detail.html
+++ b/portfolio_ideta/works_hp_detail.html
@@ -47,8 +47,7 @@
 
     <main data-scroll-container>
         <section data-scroll-section class="scroll_section">
-            <div class="top wrapper message-body js-fixedPosition">
-                <div class="bg"></div>
+            <div class="top wrapper">
                 <div class="container">
                     <div class="ttl">
                         <h1>カフェサイト（架空）</h1>
@@ -63,6 +62,7 @@
                 </div>
             </div>
         </section>
+
         <section data-scroll-section class="scroll_section">
             <div class="contents wrapper">
                 <!-- <div class="content">
