--- a/portfolio_ideta/about.html
+++ b/portfolio_ideta/about.html
@@ -65,7 +65,7 @@
                             </p>
                         </div>
                     </div>
-                    <!-- <div class="second_contents">
+                    <div class="second_contents">
                         <div class="txt">
                             <p>Webデザイナーとして、どんなことが私にできるのか。<br>
                                 看護師として大切にしてきたことと、養ってきた「聞く力」「寄り添う力」が私の強みであり、これからもずっと大切にしていきたい、自分の軸として持っていたい。<br><br>
@@ -75,7 +75,7 @@
                             </p>
                             <p>人生の大切な部分で、人の想いに触れ、関わり、支え、一緒に歩んでいく。</p>
                         </div>
-                    </div> -->
+                    </div>
 
                 </div>
             </div>
