--- a/portfolio_ideta/works_hp.html
+++ b/portfolio_ideta/works_hp.html
@@ -70,19 +70,15 @@
                         <p>レスポンシブ</p>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <section data-scroll-section class="scroll_section">
-
-            <a href="">
-                <div class="btn">
-                    <p class="en">CONTACT</p>
-                    <img src="./images/mail.svg">
+                <div class="link wrapper">
+                    <a href="">
+                        <div class="btn">
+                            <p class="en">CONTACT</p>
+                            <img src="./images/mail.svg">
+                        </div>
+                    </a>
                 </div>
-            </a>
-
-
+            </div>
 
         </section>
     </main>
