--- a/portfolio_ideta/works_hp_detail.html
+++ b/portfolio_ideta/works_hp_detail.html
@@ -65,10 +65,6 @@
 
         <section data-scroll-section class="scroll_section">
             <div class="contents wrapper">
-                <!-- <div class="content">
-                    <p class="ttl">制作期間</p>
-                    <p class="txt">２日</p>
-                </div> -->
                 <table>
                     <tr>
                         <th>
@@ -132,9 +128,9 @@
                         またターゲット層に合わせて、最低限の文字数とし、視認性に配慮した。
                     </p>
                 </div>
-
             </div>
         </section>
+
         <section data-scroll-section class="scroll_section">
             <div class="all">
                 <div class="allpage">
@@ -170,14 +166,14 @@
                     </div>
 
                 </div>
-                <!-- <div class="wrapper"> -->
-                <a href="">
-                    <div class="btn">
-                        <p class="en">CONTACT</p>
-                        <img src="./images/mail.svg">
-                    </div>
-                </a>
-                <!-- </div> -->
+                <div class="wrapper">
+                    <a href="">
+                        <div class="btn">
+                            <p class="en">CONTACT</p>
+                            <img src="./images/mail.svg">
+                        </div>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
