--- a/portfolio_ideta/about.html
+++ b/portfolio_ideta/about.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/about.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <script>
         (function (d) {
             var config = {
@@ -26,20 +28,44 @@
 
 <body>
     <header>
-        <nav>
-            <li>
-                <ul class="en"><a href="">TOP</a></ul>
-                <ul class="en"><a href="">ABOUT ME</a></ul>
-                <ul class="en"><a href="">CONTACT</a></ul>
-            </li>
+        <div class="header">
+            <nav class="pc_nav">
+                <li>
+                    <ul class="en"><a href="./index.html">TOP</a></ul>
+                    <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
+                    <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
+                </li>
 
-            <li>
-                <ul class="en"><a href="">HP</a></ul>
-                <ul class="en"><a href="">LP</a></ul>
-                <ul class="en"><a href="">BANNER</a></ul>
-                <ul class="en"><a href="">WORKS</a></ul>
-            </li>
-        </nav>
+                <li>
+                    <ul class="en"><a href="./works_hp.html">HP</a></ul>
+                    <ul class="en"><a href="./works_lp.html">LP</a></ul>
+                    <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
+                    <ul class="en">WORKS</ul>
+                </li>
+            </nav>
+            <div class="sp_btn"><span></span></div>
+            <div class="sp_menu">
+                <div class="sp_portfolioname">
+                    <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+                </div>
+                <div class="content">
+                    <nav class="sp_nav">
+                        <li>
+                            <ul class="en"><a href="./index.html">TOP</a></ul>
+                            <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
+                            <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
+                            <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
+                            <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
+                            <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
+                        </li>
+                    </nav>
+                    <div class="triangle_top"></div>
+                    <div class="triangle_bottom"></div>
+
+                </div>
+            </div>
+
+        </div>
     </header>
     <div class="portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
@@ -411,7 +437,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
                         smooth: true,
 
                     },
-                    mobile: {
+                    smartphone: {
                         direction: 'horizontal',
                         smooth: true,
 
@@ -422,6 +448,15 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         })()
 
     </script>
+    <script>
+        $(function () {
+            $('.sp_btn').on('click', function () {
+                $('.sp_menu').fadeToggle();
+                $('.sp_btn').toggleClass('open');
+            })
+        });
+    </script>
+
 </body>
 
 </html>
