--- a/portfolio_ideta/works_hp.html
+++ b/portfolio_ideta/works_hp.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/works_hp.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <script>
         (function (d) {
             var config = {
@@ -26,20 +28,44 @@
 
 <body>
     <header>
-        <nav>
-            <li>
-                <ul class="en"><a href="">TOP</a></ul>
-                <ul class="en"><a href="">ABOUT ME</a></ul>
-                <ul class="en"><a href="">CONTACT</a></ul>
-            </li>
+        <div class="header">
+            <nav class="pc_nav">
+                <li>
+                    <ul class="en"><a href="./index.html">TOP</a></ul>
+                    <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
+                    <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
+                </li>
 
-            <li>
-                <ul class="en"><a href="">HP</a></ul>
-                <ul class="en"><a href="">LP</a></ul>
-                <ul class="en"><a href="">BANNER</a></ul>
-                <ul class="en"><a href="">WORKS</a></ul>
-            </li>
-        </nav>
+                <li>
+                    <ul class="en"><a href="./works_hp.html">HP</a></ul>
+                    <ul class="en"><a href="./works_lp.html">LP</a></ul>
+                    <ul class="en"><a href="./works_bn.html">BANNER</a></ul>
+                    <ul class="en">WORKS</ul>
+                </li>
+            </nav>
+        </div>
+        <div class="sp_btn"><span></span></div>
+        <div class="sp_menu">
+            <div class="sp_portfolioname">
+                <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+            </div>
+            <div class="content">
+                <nav class="sp_nav">
+                    <li>
+                        <ul class="en"><a href="./index.html">TOP</a></ul>
+                        <ul class="en"><a href="./about.html">ABOUT ME</a></ul>
+                        <ul class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></ul>
+                        <ul class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></ul>
+                        <ul class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></ul>
+                        <ul class="en"><a href="./index.html#contact">CONTACT</a></ul>
+                    </li>
+                </nav>
+                <div class="triangle_top"></div>
+                <div class="triangle_bottom"></div>
+
+            </div>
+
+        </div>
     </header>
     <div class="portfolioname">
         <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
@@ -48,14 +74,14 @@
         <section data-scroll-section class="scroll_section">
             <div class="contents wrapper">
                 <div class="content">
-                    <img src="./images/hp_cafe_1.jpg">
+                    <img src="./images/hp_cafe_1.png">
                     <p class="ttl">カフェサイト（架空）</p>
                     <div>
                         <p>レスポンシブ</p>
                     </div>
                 </div>
                 <div class="content">
-                    <img src="./images/works_hp_00-80.jpg">
+                    <img src="./images/works_hp_00.png">
                     <p class="ttl">-</p>
                     <p class="en">In production</p>
                     <div>
@@ -63,7 +89,7 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="./images/works_hp_00-80.jpg">
+                    <img src="./images/works_hp_00.png">
                     <p class="ttl">-</p>
                     <p class="en">In production</p>
                     <div>
@@ -97,7 +123,7 @@
                         smooth: true,
 
                     },
-                    mobile: {
+                    smartphone: {
                         direction: 'horizontal',
                         smooth: true,
 
@@ -108,6 +134,15 @@
         })()
 
     </script>
+    <script>
+        $(function () {
+            $('.sp_btn').on('click', function () {
+                $('.sp_menu').fadeToggle();
+                $('.sp_btn').toggleClass('open');
+            })
+        });
+    </script>
+
 </body>
 
 </html>
